<resources>
    <string name="app_name">BicicletasUsuario</string>
    <string name="pass">Contraseña</string>
    <string name="confir">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="ci">Cédula</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="documento" />
    <string name="img">Foto</string>
    <string name="textview">TextView</string>
    <string name="alquibici"><u>Alquilar bicicleta</u></string>
    <string name="ok">Registrarse</string>
    <string name="cedula">Cédula</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="falta_usuario_contraseña">Ingrese usuario y contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="recordarme">Recordarme</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="salir">Cerrar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="numero">Numero</string>
    <string name="direccion">Dirección</string>
    <string name="olvidopass"><u>Olvide La Contraseña</u></string>
    <string name="cambiarpass"><u>Cambiar Contraseña</u></string>
    <string name="recuperarpass"><u>Recuperar Cuenta</u></string>
    <string name="vermapa"><u>ver mapa</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="precios">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
    </string-array>
    <string name="title_activity_qr">QR</string>
    <string-array name="horas">
        <item>0 a 15 mins</item>
        <item>15 a 30 mins</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>3 horas</item>
        <item>4 horas</item>
        <item>4 a 10 hrs</item>
    </string-array>
</resources>
