<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrar">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passConfir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confir"

            android:inputType="textPassword"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="217dp"
            android:layout_height="43dp"
            android:layout_marginTop="190dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/group"
            android:layout_width="214dp"
            android:layout_height="37dp"
            android:layout_marginTop="235dp"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/ci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/ci"
                android:textColor="#fff" />


            <RadioButton
                android:id="@+id/pasaporte"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/pasaporte"
                android:textColor="#fff" />

        </RadioGroup>

        <EditText
            android:id="@+id/documento"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="275dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="325dp"
            android:backgroundTint="#ffd70d"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:textColorHint="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".96">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_primary_round"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:onClick="Registrarse"
            android:text="@string/ok"
            android:visibility="visible"
            android:textColor="#fff" />

        <ProgressBar
            android:id="@+id/pbRegistrarse"
            style="@style/progressBarIS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/fondo_primary_round"
            android:visibility="gone" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>