<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/fondo_cajas_texto_iniciar_sesion"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/UsuarioError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:inputType="text"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/Recordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/recordarme" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/IniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boton_iniciar_sesion"
            android:onClick="IniciarSesion"
            android:visibility="visible"
            android:text="@string/iniciar_sesion"
            android:textColor="#fff" />

        <ProgressBar
            android:id="@+id/pbISesion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/progressBarIS"
            android:visibility="gone"
            android:background="@drawable/boton_iniciar_sesion"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" O "
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:orientation="horizontal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_registrarse"
        android:onClick="Registrarse"
        android:text="@string/registrarse"
        android:textColor="#fff" />

</LinearLayout>